<resources>
    <string name="app_name">GomRegion</string>
    <string name="key_API">AIzaSyDC-Hu7-SGmT91CZKpdm5kpQN_gWe8rLYc</string>
    <string name="secondary_header">Социальные сети и мессенджеры в одном месте</string>
    <string name="main_header">\"Гомельский район в твоей руке\"</string>
    <string name="todo">TODO</string>
    <string name="magazine">Районная газета \"МАЯК\"</string>
    <string name="gomelisp">Сайт \"Гомельского райисполкома\"</string>
    <string name="start_text">
        Вы устали искать социальные сети и группы популярных мессенджеров о Гомельском районе?
    </string>
    <string name="text_2">
        Выбрав на нижней панели любую форму общения в социальных сетях и мессенджерах, переход
        осуществляется мгновенно. Под каждым видео оставляя комментарии и давая обратную связь,
        тем самым Вы участвуете в жизни Гомельского района любой сферы жизнедеятельности, в
        проводимых мероприятиях.
    </string>
    <string name="text_3">Пока мы вместе, нам всё под силу</string>
    <string name="text_4">Вы активный житель Гомельского района?</string>
    <string name="text_5">
        С помощью комментариев и личных сообщений в социальных сетях и мессенджерах у Вас
        появляется возможность обращаться по вопросам, касающимся благоустройства, сферы
        коммунального хозяйства, оставить предложения по развитию нашего района.
    </string>
    <string name="text_6">Вы гость Гомельского района?</string>
    <string name="text_7">
        Понравился наш район? Вы - житель соседнего района?
        \nМы готовы делиться опытом и быть на связи для решения подобных проблем жизнеобеспечения
        населения, реализации гражданских инициатив.
    </string>

    <string name="selsovet">Какой-то сельсовет</string>
    <string name="our_selsipolcoms">Наши сельисполкомы</string>
    <string name="appeals">Для обращений граждан</string>
    <string name="share">Поделиться приложением</string>
    <string name="to_link">Перейти на сайт</string>

    <string name="title_01">
        Гомельский районный исполнительный комитет
    </string>

    <string name="description_01">
        Дорогие друзья! Мы будем рады приветствовать Вас на официальном сайте Гомельского
        райисполкома! В условиях века информационных технологий власть должна быть предельно
        открытой и доступной для своих граждан. Уверен, что наш сайт позволит Вам получить
        информацию о районе, познакомит с его красотой…
    </string>

    <string name="title_02">
        Районная газета «Маяк»
    </string>

    <string name="description_02">
        Учреждение «Редакция Гомельской районной газеты «Маяк»  — некоммерческая организация,
        юридическое лицо, созданное собственником для подготовки и издания газеты. Целью газеты
        является распространение правдивой, объективной информации о политической, социальной и
        культурной жизни Гомельского района. Деятельность газеты осуществляется в соответствии с
        Законом Республики Беларусь «О средствах массовой информации».
    </string>

    <string name="title_03">
        Профсоюзы Гомельского района
    </string>

    <string name="description_03">
        Гомельское районное объединение организаций профсоюзов
        \nАдрес: 246042, город Гомель, улица Ильича, дом 51а, кабинет 322
        \nКонтактный телефон – 8(0232) 30 27 31
    </string>

    <string name="title_04">
        Гомельский районный физкультурно-спортивный клуб \"Урожай\"
    </string>

    <string name="description_04">
        \nГосударственное учреждение Гомельский районный физкультурно-спортивный клуб \"Урожай\"
        \nГомельская обл., Гомельский р-н, Ерёминский с/с, д. Еремино, ул. Сурганова Ф. А., д. 10
    </string>

    <string name="title_05">
        Центр Культуры Гомельского района
    </string>

    <string name="description_05">
        Государственное учреждение «Центр культуры Гомельского района» является учреждением
        культуры смешанного типа, созданным для осуществления информационных, просветительских,
        образовательных, воспитательных, развлекательных и других функций коммерческого и
        некоммерческого характера в отрасли культуры.
    </string>

    <string name="title_06">
        ТЦСОН Гомельского района
    </string>

    <string name="description_06">
        Целью деятельности Центра является осуществление на закрепленной территории Гомельского
        района организационной, методической и практической деятельности по социальному обслуживанию
        граждан, находящихся в трудной жизненной ситуации, а также функций по опеке и попечительству
        в отношении совершеннолетних лиц, которые признаны недееспособными или ограниченно дееспоспособными.
    </string>

    <string name="title_07">
        Центр по ОДБО Гомельского района
    </string>

    <string name="description_07">
        Адрес: ул. 7-я Техническая, 1Б, г. Гомель, 246013
        \nE—mail: centrgomel@mail.gomel.by
        \nТел./факс: 8 (0232) 29-07-01
    </string>

    <string name="title_08">
        Централизованная библиотечная сеть Гомельского района
    </string>

    <string name="description_08">
        Дорогие друзья! Мы приветствуем вас на сайте Государственного учреждения культуры
        «Централизованная библиотечная сеть Гомельского района». Будем рады, если вы станете
        постоянными пользователями нашей библиотеки.
        \nАдрес: деревня Берёзки, улица 60 лет СССР, дом 10А.
    </string>

    <string name="title_09">
        Сервисный центр Гомельского района \"Белтелеком\"
    </string>

    <string name="description_09">
        Республиканское унитарное предприятие электросвязи «Белтелеком» – ведущая
        телекоммуникационная компания с многолетней историей, персонал которой обеспечивает и
        развивает важные для государства, общества, частных и корпоративных клиентов технологии связи.
    </string>

    <string name="title_10">
        КЖУП \"Гомельский райжилкомхоз\"
    </string>

    <string name="description_10">
        Коммунальное жилищное унитарное предприятие "Гомельский райжилкомхоз" сегодня - это свыше
        тысячи профессионалов, призванных удовлетворить потребности населения Гомельского района в
        жилищно коммунальных услугах и обеспечить надлежащее функционирование водо- и
        теплоисточников, а так же сетей водо- теплоснабжения и других коммунальных объектов. Для
        реализации уставных задач предприятием создано и работает девять ремонтно-эксплуатационных
        цехов в различных населенных пунктах района.
    </string>
    <string name="qr">Отсканируйте QR-код</string>
</resources>