<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".presentation.pages.MainFragment">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_beige"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:elevation="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_magazine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_shape"
        android:text="@string/magazine"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_gomelisp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_shape"
        android:text="@string/gomelisp"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_appeals"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_shape"
        android:text="@string/appeals"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_text"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:justificationMode="inter_word"
        style="@style/MyTextStyle"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/text_2"
        android:justificationMode="inter_word"
        style="@style/MyTextStyle"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:background="@color/light_grey"
        >
        <View
            android:layout_width="@dimen/_4sdp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@string/text_3"
            android:textColor="@color/grey"
            android:textSize="@dimen/_15ssp"
            android:textStyle="italic" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:backgroundTint="@color/light_grey"
        android:elevation="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/ic_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/text_4"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_5"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_15ssp"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:videoId="E5I8E2NcCXs"
            app:autoPlay="false" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:backgroundTint="@color/light_grey"
        android:elevation="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/ic_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/text_6"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_7"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

















</LinearLayout>
</ScrollView>